# argodsm-ompss-toy

./: .gitignore  CMakeLists.txt  LICENSE  README.md
c_bench/: CMakeLists.txt
c_bench/daxpy/: daxpy-strong.c  daxpy-weak.c
c_bench/daxpy_strong/: CMakeLists.txt  daxpy.c
c_bench/daxpy_weak/: CMakeLists.txt  daxpy.c
c_bench/fibonacci/: CMakeLists.txt
c_bench/matvec/: matvec-weak.c
c_bench/matvec_strong/: CMakeLists.txt  matvec.c
c_bench/matvec_weak/: CMakeLists.txt  matvec.c
common/: CMakeLists.txt
cpp_bench/: CMakeLists.txt
cpp_bench/himeno/: CMakeLists.txt  himeno-ompss-2-cluster-strong.cpp  himeno-ompss-2-cluster-weak.cpp  himeno-ompss-2-cluster.cpp  himeno-ompss-2.cpp
cpp_bench/matmul/: CMakeLists.txt  matmul-ompss-2-cluster-strong.cpp  matmul-ompss-2-cluster-weak.cpp  matmul-ompss-2.cpp
cpp_bench/new_bench/: CMakeLists.txt  new_bench-ompss-2.cpp
daxpy_strong/: CMakeLists.txt  daxpy.c
fibonacci/: CMakeLists.txt  fibonacci.c
matvec_strong/: CMakeLists.txt  matvec.c
matvec_weak/: CMakeLists.txt  matvec.c
matvec_weak/json/: matvec_weak_single_node.json.in
